opam-version: "1.2"
maintainer: "palmskog@gmail.com"
authors: [ "Peter Sewell" "Francesco Zappa Nardelli" "Scott Owens" ]

homepage: "http://www.cl.cam.ac.uk/~pes20/ott/"
dev-repo: "https://github.com/ott-lang/ott.git"
bug-reports: "https://github.com/ott-lang/ott/issues"
license: "part BSD3, part LGPL 2.1"

build: [ make "-j%{jobs}%" "-C" "coq" ]
install: [ make "-C" "coq" "install" ]
remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/Ott'" ]
depends: [ "coq" {(>= "8.5" & < "8.6~") | (>= "8.6" & < "8.7~") | (>= "8.7" & < "8.8~") | (>= "8.8" & < "8.9~") | (>= "8.9" & < "8.10~")} ]

tags: [
  "category:Computer Science/Semantics and Compilation/Semantics"
  "keyword:abstract syntax"
]
